# autotools

./: Makefile  Makefile.in  OUTPUT.sh  config.h  config.h.in  config.status  configure  configure.ac  gcc_build.sh  main.c  makefile
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
include/: main.h
output/: testApp
src/: Makefile  Makefile.am  Makefile.in  main.c
src/.deps/: main.Po
src/m1/: m1.c
src/m1/.deps/: m1.Po
src/m1/include/: m1.h
src/m2/: m2.c
src/m2/.deps/: m2.Po
src/m2/include/: m2.h
